--- a/website/home.html
+++ b/website/home.html
@@ -43,7 +43,7 @@
                 <li><a href="#">
                     <img src="./image/profile.png" class="user-img" id="proimg" onclick="toggleMenu()" alt="Logo"></a>
 
-                    <!-- -------------profile-drop-down-menu------------    -->
+                    <!-----------------profile-drop-down-menu------------    -->
                     <div class="profile-menu-wrap" id="profileMenu">
                         <div class="profile-menu">
                             <div class="user-info">
