--- a/website/home.html
+++ b/website/home.html
@@ -23,7 +23,7 @@
     <div class="wrapper">
         <div class="search-input">
           <a href="" target="_blank" hidden></a>
-          <input type="text" placeholder="Type to search..">
+          <input type="text" placeholder="Type to search...">
           <div class="autocom-box">
           </div>
           <div class="icon"><i class="fas fa-search"></i></div>
